# snake-cpp-windows

./: CMakeLists.txt  README.md  build.bat
assets/: README.md
docs/: STEP_01_setup.md  STEP_02_window.md  STEP_03_game_loop.md  STEP_04_snake.md  STEP_05_movement.md  STEP_06_food.md  STEP_07_collision.md  STEP_08_score.md  STEP_09_polish.md
src/: main.cpp
